--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  height: 100vh;
+  height: 90vh;
   padding: 20px;
 }
 
@@ -127,6 +127,9 @@
   max-width: 1200px;
   margin-top: auto;
   padding-bottom: 20px;
+  justify-content: right;
+  align-items: center;
+  gap: 20px;
 }
 
 .new-message-container input[type="text"] {
@@ -134,7 +137,18 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  margin-right: 10px;
+  flex-grow: 1;
+  width: 100%;
+  /*margin-right: 10px;*/
+}
+
+.new-message-container .input {
+    width: 100%;
+    margin-right: 30px;
+}
+
+.new-message-container:last-child {
+    flex-grow: 1;
 }
 
 .new-message-container button, .messages-container button {
@@ -144,7 +158,10 @@
   color: white;
   border-radius: 5px;
   cursor: pointer;
+  flex-grow: 0;
+  margin-top: 10px;
 }
+
 
 .new-message-container button:hover, .messages-container button:hover {
   background-color: #0056b3;
@@ -153,3 +170,32 @@
 .invisible {
     display: none;
 }
+
+/* Hide the actual file input */
+.file-input {
+  display: none;
+}
+
+/* Style the label to look like a button */
+.file-label {
+  display: inline-block;
+  padding: 10px 10px;
+  font-size: 13px;
+  cursor: pointer;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+  margin-top: 10px;
+}
+
+.file-label:hover {
+  background-color: #0056b3;
+}
+
+#msgWrapper {
+    display: flex;
+    flex-grow: 1;
+}
+
